--- a/Final/build.gradle
+++ b/Final/build.gradle
@@ -28,6 +28,8 @@ dependencies {
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation 'org.apache.poi:poi-ooxml:5.0.0'
+
 }
 
 tasks.named('test') {
