--- a/Final/src/main/resources/application.properties
+++ b/Final/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-spring.datasource.url=jdbc:mysql://localhost:3306/CodelyserFinal
+spring.datasource.url=jdbc:mysql://localhost:3306/testing
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.jpa.hibernate.ddl-auto=update
